--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "react-scripts": "1.1.4"
   },
+  "homepage": "http://abysmaledge.github.io/ideal-fiesta",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
